T9/Z3/.gcc.out
/rhome/l/lbuturovic1/workspace/OR/T9/Z3/main.c: In function ‘kapitaliziraj’:
/rhome/l/lbuturovic1/workspace/OR/T9/Z3/main.c:17:9: error: expected ‘,’ or ‘;’ before ‘while’
         while(*poc!='\0')
         ^~~~~
/rhome/l/lbuturovic1/workspace/OR/T9/Z3/main.c:35:1: warning: ISO C forbids nested functions [-Wpedantic]
 int main() {
 ^~~
/rhome/l/lbuturovic1/workspace/OR/T9/Z3/main.c:35:5: warning: ‘main’ is normally a non-static function [-Wmain]
 int main() {
     ^~~~
/rhome/l/lbuturovic1/workspace/OR/T9/Z3/main.c:42:1: error: expected declaration or statement at end of input
 }
 ^
/rhome/l/lbuturovic1/workspace/OR/T9/Z3/main.c:16:13: warning: unused variable ‘br’ [-Wunused-variable]
         int br=0
             ^~
/rhome/l/lbuturovic1/workspace/OR/T9/Z3/main.c:15:15: warning: unused variable ‘poc’ [-Wunused-variable]
         char* poc=s;
               ^~~
/rhome/l/lbuturovic1/workspace/OR/T9/Z3/main.c:42:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
At top level:
/rhome/l/lbuturovic1/workspace/OR/T9/Z3/main.c:35:5: warning: ‘main’ defined but not used [-Wunused-function]
 int main() {
     ^~~~
